--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="20dp"
-        android:hint="Email Address"
+        android:hint="User name"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
